# univercity

./: .gitignore  ReadMe.txt
RibaIMyasoHTMLLOVE/: index.html  styles.css
RibaIMyasoHTMLLOVE/Nastya/: index.html  styles.css
project_cmake/AiPOS/: CMakeLists.txt
project_cmake/GIIS/lab1/: CMakeLists.txt  main.cpp  main2.cpp
project_cmake/GIIS/lab1/assets/: imgui.ini
project_cmake/GIIS/lab2/: CMakeLists.txt  main.cpp
project_cmake/GIIS/lab2/BD/: contats.db
project_cmake/GIIS/test_imgui/: CMakeLists.txt  main.cpp
project_cmake/GIIS/test_imgui_dx9/: main.cpp
project_cmake/GIIS/test_imgui_dx9/TImage/: TImage.h
project_cmake/GIIS/test_opencv/: CMakeLists.txt  main.cpp  main2.cpp
project_cmake/GIIS/test_opencv/assets/: imgui.ini
project_cmake/SSP_2/: CMakeLists.txt
project_cmake/SSP_2/lab2/: main.cpp
projects_g++/: .gitignore  README.md
projects_g++/src/3 kurs/5sem/MRZIS/lab1/: data.txt  lab1.cpp  lab1v2.cpp  lab_test.cpp  labv3True.cpp
projects_g++/src/3 kurs/5sem/SSP/lab1/: ssplab1.cpp
projects_g++/src/3 kurs/5sem/SSP/lab2/: input.txt  lab2ssp.cpp
python/src/EYAI/lab1/: lab1.py
python/src/KMZI/lab2/: hash_output.txt  iterations.txt  lab2kmzi.py
python/src/KMZI/lab4/: goislafj.py  lab4kmzi.py  sadf.py  text.txt
python/src/KMZI/lab5/: ckajlsghakg.py  client.py  counter.py  register.py  sdfdasf.py  test.py
python/src/KMZI/lab6/: ec_csr.pem  ec_keypair.pem
python/src/MrZIS/lab1/: lab1mrzis.py
python/src/MrZIS/lab2/: SLP_btc_l.py  SLP_onl_l.py  results_btc_a_l.txt  results_btc_s_l.txt  results_onl_a_l.txt  results_onl_s_l.txt
python/src/MrZIS/lab3/: lab3mrzis.py
python/src/MrZIS/lab5/: mrzislab5.py
python/src/MrZIS/lab6/: rf.py  task.py
python/src/MrZIS/lab6/abc/: task.py  test.py
python/src/PBZ/: 567lab_bd.sql
python/src/PBZ/5lab/: 5labpbz.py
python/src/PBZ/6lab/: 6labpbz.py
python/src/SSP/lab3/: quest1.py  quest2.py  quest3.py
python/src/next_sem_mrzis/lab1/: lab.py  lab1.py
rust/KMZI/lab1/src/: client.rs  server.rs
rust/KMZI/lab1client/: Cargo.toml
rust/KMZI/lab1client/src/: crypt.rs  lab1kmzi.cpp  main.rs
rust/KMZI/lab1server/: Cargo.toml
rust/KMZI/lab1server/src/: main.rs
rust/KMZI/lab2/: Cargo.toml
rust/KMZI/lab2/src/: main.rs  output.txt  test.rs
rust/src/KMZI/lab1/: Cargo.toml
rust/src/KMZI/lab2/src/: main.rs
vs_community/AiPOS/lab1/server/: server.sln
vs_community/AiPOS/lab1/server/server/: server.cpp  server.vcxproj
vs_community/AiPOS/lab1/server/server/x64/Debug/: server.exe.recipe  server.ilk  vc143.idb
(+8 files in other folders)
